--- a/home.css
+++ b/home.css
@@ -31,7 +31,7 @@ body {
 
 .formulario__input{
     padding: 20px;
-    background: rgba(0,0,0,0.1);
+    background: rgba(43, 238, 25, 0.1);
     border: 1px solid rgba(0,0,0,0.3);
     margin-bottom: 40px;
 }
